[FIX] (general): scrollbar

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -7,6 +7,19 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+*::-webkit-scrollbar{
+  width: 10px;
+  padding: 2px;
+}
+*::-webkit-scrollbar-track{
+  background-color: #fff;
+}
+*::-webkit-scrollbar-thumb{
+  background-color: #036d19;
+  border-radius: 20px;
+  border: 2px solid #fff;
+}
+
 body {
   width: 100%;
 }
